2005-03-04   Christian Stimming <stimming@tuhh.de>

	* src/parser/text.c: Also some small performance improvements.

	* src/base/buffer.c, src/io/bufferedio.c: Add some small
	performance improvements; add comments about further potential
	performance improvements.

===========================================================================
MARK: released gwenhywfar-1.9.0 (2005/02/19)
===========================================================================


2005/02/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a stupid design flaw in CONSTLIST2: The only difference between
  a GWEN_LIST and GWEN_CONSTLIST was the type of the stored data.
  So instead of creating a new type (GWEN_CONSTLIST) we now basically use
  a GWEN_LIST and modify the return value if necessary. This change is
  completely transparent, no API change involved.
- added function GWEN_IdList_dup()


2005/02/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_Time_Diff()


2005-02-20  Christian Stimming  <stimming@tuhh.de>

	* gwenhywfar.spec.in: Add *.crt files to rpm.


===========================================================================
MARK: released gwenhywfar-1.8.0 (2005/02/19)
===========================================================================



2005/02/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- when setting the new function type pointer for AskAddCert then set the
  old pointer to 0 and vice versa.
- now when a certificate has been received the user is always asked
- fixed link order in tools


2005/02/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_LIST code (could crash the program)
- fixed a bug in XML code (iscntrl() also returns true for some characters
  above 0x80 which makes this function useless for UTF-8)

